added ext-mbstring as a heroku dependency in composer

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "silex/silex": "~1.1",
     "monolog/monolog": "~1.7",
     "herrera-io/silex-pdo": "~1.2",
-    "respect/validation": "0.7.*"
+    "respect/validation": "0.7.*", 
+    "ext-mbstring": "*"
+    
   },
   "require-dev": {
     "heroku/heroku-buildpack-php": "*"
